Fix code-comment word wrap issue.

--- a/css/index.css
+++ b/css/index.css
@@ -46,4 +46,5 @@ html {
   font-style: italic;
   position: relative;
   left: 3%;
+  width: 96%;
 }
